# menrva

./: .gitignore  .gitmodules  ADVANCED_DEBUGGING.md  CONTRIBUTING.md  DEV_SCRIPTS.md  PORTABLE_DEV_ENV.md  README.md  TODO.md  TODOS.md  audio_effects.xml  build_variables.ps1  compile_protobuf_messages.ps1  create_new_command_handler.ps1  create_new_protobuf_command.ps1  deploy_backend_to_device.ps1  deploy_to_device.ps1  extract_artifacts.ps1  generate_command_handler_base.ps1  generate_command_handler_map.ps1  generate_magisk_module.ps1  generate_protobuf_commands.ps1
engine/src/: CMakeLists.txt  CMakeSettings.json
engine/src/audio/: AudioBuffer.h  AudioComponentsBuffer.cpp  AudioComponentsBuffer.h  AudioFormat.h  AudioIOBufferBase.cpp  AudioIOBufferBase.h  AudioInputBuffer.cpp  AudioInputBuffer.h  AudioOutputBuffer.cpp  AudioOutputBuffer.h  IAudioBuffer.h  Sample.h
engine/src/command_handlers/: CommandHandlerBase.cpp  CommandHandlerBase.h  Engine_GetLogLevelLimit_Handler.cpp  Engine_GetLogLevelLimit_Handler.h  Engine_GetLogLevel_Handler.cpp  Engine_GetLogLevel_Handler.h  Engine_GetVersion_Handler.cpp  Engine_GetVersion_Handler.h  Engine_SetLogLevelLimit_Handler.cpp  Engine_SetLogLevelLimit_Handler.h  Engine_SetLogLevel_Handler.cpp  TypedCommandHandlerBase.h
engine/src/commands/: CommandBase.h  Engine_GetLogLevel_Command.cpp  Engine_GetLogLevel_Command.h  Engine_GetVersion_Command.cpp  Engine_GetVersion_Command.h  Engine_SetLogLevel_Command.cpp  Engine_SetLogLevel_Command.h  MenrvaCommands.h  TypedCommandBase.h
engine/src/commands/messages/: Engine_GetLogLevel.pb.cc  Engine_GetLogLevel.pb.h  Engine_SetLogLevel.pb.cc  Engine_SetLogLevel.pb.h
engine/src/convolver/: ConvolutionOperations.cpp  ConvolutionOperations.h  Convolver.cpp  Convolver.h
engine/src/dependency_injection/: ContainerInitializer.cpp  ContainerInitializer.h
engine/src/effects/: BassBoost.cpp  BassBoost.h  EffectBase.cpp  Equalizer.cpp  Equalizer.h  MasterLimiter.cpp  MasterLimiter.h  MultiChannelEffectsBundle.cpp  MultiChannelEffectsBundle.h  SingleChannelEffectsBundle.cpp  StereoWidener.cpp  StereoWidener.h
engine/src/engine/: CommandHandlerMap.h  CommandProcessor.cpp  CommandProcessor.h  EffectsEngine.cpp  EffectsEngine.h
engine/src/fft/: FftInterfaceBase.cpp  FftwInterface.cpp  KfrInterface.cpp
engine/src/fourier_transform/: FftInterfaceBase.h  FftwInterface.cpp  FftwInterface.h  KfrInterface.cpp  KfrInterface.h  KissFftInterface.cpp  KissFftInterface.h
engine/src/host/: HostServiceLocator.h  ModuleStructures.h
engine/src/impulse_response/: FirGenerator.cpp  FirGenerator.h  WaveGenerator.cpp
engine/src/ir/: FirGenerator.cpp  FirGenerator.h  WaveGenerator.cpp  WaveGenerator.h  WaveGeneratorConstants.h
engine/src/log/: ILogOverrideManager.h  ILogProducer.cpp  ILogProducer.h  ILogWriter.cpp  ILogWriter.h  LogLevels.cpp  LogLevels.h  LogOverrideManager.cpp  LogOverrideManager.h  LogProducer.cpp  LogProducer.h  LogWriterBase.cpp  LogWriterBase.h
engine/src/tools/: Buffer.cpp  Buffer.h  ConversionBuffer.cpp  ConversionBuffer.h  IBuffer.h  IConversionBuffer.h  ServiceLocator.cpp  ServiceLocator.h  StringOperations.cpp  StringOperations.h
engine_src/: CMakeLists.txt  CMakeSettings.json
engine_src/audio/: AudioBuffer.h  AudioIOBufferBase.h  AudioInputBuffer.cpp  AudioInputBuffer.h
engine_src/command_handlers/: CommandHandlerBase.cpp  CommandHandlerBase.h  Engine_GetVersion_Handler.h  TypedCommandHandlerBase.cpp
engine_src/commands/: Engine_GetVersion_Command.cpp  TypedCommandBase.cpp
engine_src/commands/messages/: Engine_GetVersion.pb.cc  Engine_GetVersion.pb.h
engine_src/convolver/: ConvolutionOperations.cpp  ConvolutionOperationsBase.cpp
engine_src/effects/: BassBoost.cpp  Equalizer.cpp  MasterLimiter.cpp  SingleChannelEffectBase.h
engine_src/engine/: CommandHandlerMap.cpp  EffectsEngine.cpp
engine_src/fft/: FftwInterface.h
engine_src/log/: LogProducer.cpp  LogProducer.h
engine_src/tools/: MathOperations.h  StringOperations.cpp
hosts/testHarness/src/: App.cpp  App.h  CMakeLists.txt  MenrvaTestHarness.cpp  MenrvaTestHarness.h  TestHarnessApp.cpp  TestHarnessWindow.cpp  TestHarnessWindow.h
hosts/testHarness/src/eventData/: SetLogLevel_EventData.cpp  SetLogLevel_EventData.h
hosts/testHarness/src/res/: TestHarnessUI.xrc
hosts/testHarness/src/tools/: TestServiceLocator.cpp  TextCtrlLogger.cpp  TextCtrlLogger.h
hosts/testHarness/src/viewModels/: ConsoleViewModel.cpp  ConsoleViewModel.h  LogOverrideManagerViewModel.cpp  LogOverrideManagerViewModel.h
hosts/testHarness/src/views/: ConsoleView.cpp  ConsoleView.h  LogOverrideManagerView.cpp  LogOverrideManagerView.h
hosts/testHarness/src/xrc/: ConsoleFrame.xrc  LogOverridesFrames.xrc  LoggingOverridesFrames.xrc
menrva/app/: CMakeLists.txt  build.gradle
menrva/app/src/main/: AndroidManifest.xml
menrva/app/src/main/cpp/: BuildConfig.h  CMakeLists.txt  Config.h  ModuleInterface.cpp  ModuleInterface.h  command_map.h  config.h  effects_engine.h  enable_verbose_logging.h  engine_interface.cpp  engine_interface.h  menrva_command_map.cpp  menrva_command_map.h  menrva_effects_engine.cpp  menrva_effects_engine.h  menrva_engine_interface.cpp  menrva_engine_interface.h  menrva_interface.cpp  menrva_interface.h  menrva_module_interface.cpp  menrva_module_interface.h  module_interface.cpp  module_interface.h
menrva/app/src/main/proto/: SetEngineLogLevel.proto
menrva/app/src/main/protobuf/: Android_SystemCommand.proto  CommandClass.h.template  CommandClass.java.template  CommandsEnum.h.template  CommandsEnum.java.template  Engine_GetLogLevel.proto  Engine_GetVersion.proto  Engine_SetLogLevel.proto
menrva/app/src/main/templates/: CommandClass.cpp.template  CommandClass.h.template  CommandClass.java.template  CommandHandler.cpp.template  CommandHandler.h.template  CommandHandlerMap.cpp.template  CommandHandlerMap.h.template  CommandHandlerMapEntry.template  CommandHandlerMapInclude.template  CommandsEnum.h.template  CommandsEnum.h_Entry.template  CommandsEnum.java.template  CommandsEnum.java_Entry.Template  (+12 more)
(+494 files in other folders)
